# Tebyan.ai

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: schemas.py
app/routers/: pdf_routes.py
app/services/: ai_annotator.py  pdf_drawer.py  pdf_extractor.py
app/tests/: test_geometry.py  test_routes.py
app/utils/: geometry.py
frontend/app/: layout.tsx  page.tsx
frontend/app/landing/: page.tsx
frontend/components/: PDFPreview.tsx  ProcessingState.tsx  UploadZone.tsx
frontend/lib/: api.ts
