[project]
name = "pdf-scribble-ai-backend"
version = "0.1.0"
description = "Backend for PDF-ScribbleAI: extract, annotate, and draw handwritten-style notes on PDFs"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "python-multipart==0.0.20",
    "pymupdf==1.25.1",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "openai==1.35.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.1",
    "aiofiles==24.1.0",
    "arabic-reshaper==3.0.0",
    "python-bidi==0.6.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx==0.27.2",
]
